--- a/Notebooks/03_exploratory_data_analysis.ipynb
+++ b/Notebooks/03_exploratory_data_analysis.ipynb
@@ -1315,13 +1315,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>resorts_per_state</th>\n",
+       "      <th>state_total_skiable_area_ac</th>\n",
+       "      <th>state_total_days_open</th>\n",
+       "      <th>state_total_terrain_parks</th>\n",
+       "      <th>state_total_nightskiing_ac</th>\n",
+       "      <th>resorts_per_100kcapita</th>\n",
+       "      <th>resorts_per_100ksq_mile</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.806912</td>\n",
+       "      <td>-0.392012</td>\n",
+       "      <td>-0.689059</td>\n",
+       "      <td>-0.816118</td>\n",
+       "      <td>0.069410</td>\n",
+       "      <td>0.139593</td>\n",
+       "      <td>-0.689999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-0.933558</td>\n",
+       "      <td>-0.462424</td>\n",
+       "      <td>-0.819038</td>\n",
+       "      <td>-0.726994</td>\n",
+       "      <td>-0.701326</td>\n",
+       "      <td>-0.644706</td>\n",
+       "      <td>-0.658125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.472706</td>\n",
+       "      <td>1.978574</td>\n",
+       "      <td>2.190933</td>\n",
+       "      <td>2.615141</td>\n",
+       "      <td>0.080201</td>\n",
+       "      <td>-0.592085</td>\n",
+       "      <td>-0.387368</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.599351</td>\n",
+       "      <td>3.754811</td>\n",
+       "      <td>2.816757</td>\n",
+       "      <td>2.303209</td>\n",
+       "      <td>-0.164893</td>\n",
+       "      <td>0.082069</td>\n",
+       "      <td>-0.184291</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-0.553622</td>\n",
+       "      <td>-0.584519</td>\n",
+       "      <td>-0.679431</td>\n",
+       "      <td>-0.548747</td>\n",
+       "      <td>-0.430027</td>\n",
+       "      <td>-0.413557</td>\n",
+       "      <td>1.504408</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   resorts_per_state  state_total_skiable_area_ac  state_total_days_open  \\\n",
+       "0          -0.806912                    -0.392012              -0.689059   \n",
+       "1          -0.933558                    -0.462424              -0.819038   \n",
+       "2           1.472706                     1.978574               2.190933   \n",
+       "3           1.599351                     3.754811               2.816757   \n",
+       "4          -0.553622                    -0.584519              -0.679431   \n",
+       "\n",
+       "   state_total_terrain_parks  state_total_nightskiing_ac  \\\n",
+       "0                  -0.816118                    0.069410   \n",
+       "1                  -0.726994                   -0.701326   \n",
+       "2                   2.615141                    0.080201   \n",
+       "3                   2.303209                   -0.164893   \n",
+       "4                  -0.548747                   -0.430027   \n",
+       "\n",
+       "   resorts_per_100kcapita  resorts_per_100ksq_mile  \n",
+       "0                0.139593                -0.689999  \n",
+       "1               -0.644706                -0.658125  \n",
+       "2               -0.592085                -0.387368  \n",
+       "3                0.082069                -0.184291  \n",
+       "4               -0.413557                 1.504408  "
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Code task 2#\n",
     "#Create a new dataframe from `state_summary_scale` using the column names we saved in `state_summary_columns`\n",
-    "state_summary_scaled_df = pd.DataFrame(state_summary_scale, columns=___)\n",
+    "state_summary_scaled_df = pd.DataFrame(state_summary_scale, columns=state_summary_columns)\n",
     "state_summary_scaled_df.head()"
    ]
   },
@@ -1348,13 +1461,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "resorts_per_state             -7.295751e-17\n",
+       "state_total_skiable_area_ac   -4.163336e-17\n",
+       "state_total_days_open          7.692260e-17\n",
+       "state_total_terrain_parks      4.599495e-17\n",
+       "state_total_nightskiing_ac     7.612958e-17\n",
+       "resorts_per_100kcapita         5.075305e-17\n",
+       "resorts_per_100ksq_mile        5.075305e-17\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Code task 3#\n",
     "#Call `state_summary_scaled_df`'s `mean()` method\n",
-    "state_summary_scaled_df.___"
+    "state_summary_scaled_df.mean()"
    ]
   },
   {
@@ -1373,13 +1504,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "resorts_per_state              1.014599\n",
+       "state_total_skiable_area_ac    1.014599\n",
+       "state_total_days_open          1.014599\n",
+       "state_total_terrain_parks      1.014599\n",
+       "state_total_nightskiing_ac     1.014599\n",
+       "resorts_per_100kcapita         1.014599\n",
+       "resorts_per_100ksq_mile        1.014599\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Code task 4#\n",
     "#Call `state_summary_scaled_df`'s `std()` method\n",
-    "state_summary_scaled_df.___"
+    "state_summary_scaled_df.std()"
    ]
   },
   {
@@ -1393,13 +1542,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "resorts_per_state              1.0\n",
+       "state_total_skiable_area_ac    1.0\n",
+       "state_total_days_open          1.0\n",
+       "state_total_terrain_parks      1.0\n",
+       "state_total_nightskiing_ac     1.0\n",
+       "resorts_per_100kcapita         1.0\n",
+       "resorts_per_100ksq_mile        1.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Code task 5#\n",
     "#Repeat the previous call to `std()` but pass in ddof=0 \n",
-    "state_summary_scaled_df.___(___)"
+    "state_summary_scaled_df.std(ddof=0)"
    ]
   },
   {
@@ -1425,7 +1592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
