--- a/Notebooks/04_preprocessing_and_training.ipynb
+++ b/Notebooks/04_preprocessing_and_training.ipynb
@@ -6012,11 +6012,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "After loading ski_data from the EDA step, I removed the target resort (Big Mountain Resort) from the data set updating ski_data and saving Big Mountain Resort as big_mountain  for later use. The next step is to split ski_data into train and test at 70/30 ratio. This will help us achieve an independent test set that will not be used for training, hence providing an independent assessment. The test data will also help us avoid overfitting. After the split, it was important to have numeric features only. To achieve this, I saved the X_train and X_test of none numeric featues as named lists and dropped them from the rest of the X_train and X_test data. \n",
+    "\n",
+    "In earlier steps, the assumption was that average price will play a part in driving to a solution to our problem. Assuming that average price is a best guess, I calculated the mean y_train. Using DummyRegressor, I validated the train mean. The next step is to use metrics, specifically R2, to measure performance.   By creating an array of length the size of the training set with a single value of the mean, the result continues to match and be promising. Using the training set mean, I created an array of length the size of the test set with a single value. By using this prediction, we have an R2 that is close to zero but negative. \n",
+    "\n",
+    "Mean absolute error and mean squared error are better metrics to measure how close our predictions are to true values. I need to remember the mean squared error is large because it gives a  squared value. \n",
+    "\n",
+    "Moving to missing values, there are different ways to impute them. One way is to learn the value of imputing from the train set. Then, the imputation is applied to both train and test sets using the median. I trained the model on the train split using a leaner regression model, made predictions using the model on train and test splits, and assessed the model performance. This gave us an over 80% variance on the train split and over 70% variance on the test split. The result is an estimate of the ticket price to be within $9 of the real price. $9 is better than the $19 from guessing with just the average.  The results were not that different when the mean was used to impute missing values. To check for overtraining, other feature transformations should be explored. I employed pipeline and found similar results. Different pipelines were tested. \n",
+    "\n",
+    "The Random Forest Model prevents repeated performance checks on the test split. We can go straight from defining the pipeline to assessing the performance through cross-validation, which will perform the fitting as part of the process. I used hyperparameters with and without feature scaling on the mean and median to impute missing values. I discovered imputing with the median is better, without scaling the features. A barplot of the random forest feature importance aligns with what we have done so far—the top four features as fastQuads, Runs, Snow_making_ac, and vertical_drop. \n",
+    "\n",
+    "To make a decision on the final model, I calculated the mean absolute error for the two models, the best linear model and the random forest model. Since cross-validation defaults to R2, I specified the mean absolute error as an alternative through the scoring parameter. The random forest has less variability and lower cross-validation mean absolute error. The final exercise is to determine if additional data needs to be collected. The learning_curve function shows that model scores have a sharp rise at the low end of the sample size and flatten around 50. We have enough data, and we should avoid spending money on additional data. The best model is saved for the next step. \n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
