--- a/Notebooks/05_modeling.ipynb
+++ b/Notebooks/05_modeling.ipynb
@@ -1799,7 +1799,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Big Mountain Resort charges $81 per adult per day. We charge the same price weekdays and weekends. The model was built on the weekend price. Our model suggests we can increase the price by about $9 to $90. The hypothesis is to cover the $1,540,000 operating cost per season of the new chair lift. This price is likely to increase over time as maintenance and repair needs rise. Since we have 350,000 skiers per year, assuming they buy 5-day passes on average, we sell about 70,000 tickets yearly.  The operating cost is $22 per 5-day ticket sold or $4.4 per ticket sold. We need to increase the price by $4.4 per ticket to break even. However, this will have to be adjusted every year for repair and maintenance. To test and progress with any run closure, we will establish a SMART run closure criteria with stakeholder involvement for a decision-making framework. "
+    "Big Mountain Resort charges $81 per adult per day. We charge the same price weekdays and weekends. The model was built on the weekend price. Our model suggests we can increase the price by about $9 to $90. The hypothesis is to cover the $1,540,000 operating cost per season of the new chair lift. This price is likely to increase over time as maintenance and repair needs rise. Since we have 350,000 skiers per year, assuming they buy 5-day passes on average, we sell about 70,000 tickets yearly.  The operating cost is $22 per 5-day ticket sold or $4.4 per ticket sold. We need to increase the price by $4.4 per ticket to break even. However, this will have to be adjusted every year for repair and maintenance. \n",
+    "\n",
+    "For further improvement, we will use scenario 3, adding runs, increasing the vertical drop, installing additional chair lifts, and adding more acres for snowmaking.  To test and progress with any run closure, we will establish a SMART run closure criteria with stakeholder involvement for a decision-making framework. This will be my recommendation. "
    ]
   },
   {
