Final update for 05

--- a/Notebooks/05_modeling.ipynb
+++ b/Notebooks/05_modeling.ipynb
@@ -1801,7 +1801,7 @@
    "source": [
     "Big Mountain Resort charges $81 per adult per day. We charge the same price weekdays and weekends. The model was built on the weekend price. Our model suggests we can increase the price by about $9 to $90. The hypothesis is to cover the $1,540,000 operating cost per season of the new chair lift. This price is likely to increase over time as maintenance and repair needs rise. Since we have 350,000 skiers per year, assuming they buy 5-day passes on average, we sell about 70,000 tickets yearly.  The operating cost is $22 per 5-day ticket sold or $4.4 per ticket sold. We need to increase the price by $4.4 per ticket to break even. However, this will have to be adjusted every year for repair and maintenance. \n",
     "\n",
-    "For further improvement, we will use scenario 3, adding runs, increasing the vertical drop, installing additional chair lifts, and adding more acres for snowmaking.  To test and progress with any run closure, we will establish a SMART run closure criteria with stakeholder involvement for a decision-making framework. This will be my recommendation. "
+    "For further improvement, we will use scenario 3, adding runs, increasing the vertical drop, installing additional chair lifts, and adding more acres for snowmaking.  To test and progress with any run closure, we will establish a SMART run closure criteria with stakeholder involvement for a decision-making framework. This is my recommendation. "
    ]
   },
   {
@@ -1826,11 +1826,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The model shows a potential gain in revenue of $17.3M. This is significantly higher than the chair lift investment. However, we need to know what other costs we will need to account for to run the new lift. Most importantly, what are the forecasts for maintenance, repair, research & development, and travel & entertainment? We also need to be confident in our data. Since the original dataset presented a lot of missing values, did we choose the right imputing method, or did we degrade the data quality? Additionally, while some outliers were obviously flawed, did we remove some significant outliers? These are factors to consider for further improvement. \n",
+    "\n",
+    "When it comes to the average price, we need to understand the current pricing strategy. While increasing the price by $9 is not necessary, is it warranted? If we can answer the market’s perception of our resort, we will be able to make better decisions. The most significant push from executives could be the missed opportunity of not raising the price sooner. I need to work with marketing to uncover potential and delve into market research to validate the model. An interview with tenured executives will help find the reason behind the current pricing strategy.  \n",
+    "\n",
+    "Once leadership is satisfied with the mitigation and response to their questions, and assuming the model is accepted as a viable tool, I recommend flexibility in pricing and adopting dynamic pricing that adjusts price based on market conditions, competitor pricing, and other factors. \n",
+    "\n",
+    "The business will require making changes to parameters and testing out the different scenarios in the future. To make this process easier, I will develop four things. I will provide a well-documented walkthrough of the model with relevant training. I will establish a central repository with the proper access control to house all documentation, model inputs, and outputs. I will include a user-friendly interface to make it easy to use the model. Finally, I will provide ongoing support. \n"
+   ]
   }
  ],
  "metadata": {
