--- a/Notebooks/03_exploratory_data_analysis.ipynb
+++ b/Notebooks/03_exploratory_data_analysis.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 66,
    "metadata": {
     "scrolled": true
    },
@@ -538,7 +538,7 @@
        "4                       256.0           3565278                 5543  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +601,7 @@
        "Name: state_area_sq_miles, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +641,7 @@
        "Name: state_population, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +681,7 @@
        "Name: resorts_per_state, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +721,7 @@
        "Name: state_total_skiable_area_ac, dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +761,7 @@
        "Name: state_total_nightskiing_ac, dtype: float64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +801,7 @@
        "Name: state_total_days_open, dtype: float64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -952,7 +952,7 @@
        "4                       256.0                0.140242                90.203861  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1003,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1039,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -1054,7 +1054,7 @@
        "Name: resorts_per_100kcapita, dtype: float64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1065,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -1080,7 +1080,7 @@
        "Name: resorts_per_100ksq_mile, dtype: float64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1140,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -1272,7 +1272,7 @@
        "Connecticut                90.203861  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1299,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1315,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -1426,7 +1426,7 @@
        "4               -0.413557                 1.504408  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1461,7 +1461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -1477,7 +1477,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1504,7 +1504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -1520,7 +1520,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1542,7 +1542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -1558,7 +1558,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1592,7 +1592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1608,7 +1608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1659,7 +1659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1670,7 +1670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -1679,7 +1679,7 @@
        "(35, 7)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1706,7 +1706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -1750,7 +1750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -1765,7 +1765,7 @@
        "Name: AdultWeekend, dtype: float64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1779,7 +1779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -1816,7 +1816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -1889,7 +1889,7 @@
        "Connecticut -0.988027  1.020218"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1913,7 +1913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -1928,7 +1928,7 @@
        "Name: AdultWeekend, dtype: float64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1940,7 +1940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -2006,7 +2006,7 @@
        "Connecticut     56.800000"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2025,7 +2025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -2105,7 +2105,7 @@
        "Connecticut -0.988027  1.020218     56.800000"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2127,7 +2127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -2214,7 +2214,7 @@
        "Connecticut -0.988027  1.020218     56.800000  (53.1, 60.4]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2226,7 +2226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -2239,7 +2239,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2259,7 +2259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -2314,7 +2314,7 @@
        "Rhode Island -1.843646  0.761339           NaN      NaN"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2339,21 +2339,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\cygwin64\\tmp\\ipykernel_52988\\2495745839.py:1: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\binia\\AppData\\Local\\Temp\\ipykernel_90900\\2495745839.py:1: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
       "\n",
       "\n",
       "  pca_df['AdultWeekend'].fillna(pca_df.AdultWeekend.mean(), inplace=True)\n",
-      "C:\\cygwin64\\tmp\\ipykernel_52988\\2495745839.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\binia\\AppData\\Local\\Temp\\ipykernel_90900\\2495745839.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -2372,7 +2372,7 @@
        "Name: Rhode Island, dtype: object"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2402,7 +2402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -2453,7 +2453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -2520,7 +2520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -2657,7 +2657,7 @@
        "6               -0.007887                -0.005631  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2682,7 +2682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -2767,7 +2767,7 @@
        "resorts_per_100ksq_mile         171.141299  155.990017"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2778,7 +2778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -2857,7 +2857,7 @@
        "resorts_per_100ksq_mile      3.483281  3.112841"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2910,7 +2910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -3202,7 +3202,7 @@
        "NightSkiing_ac                  NaN                 80.0  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3227,7 +3227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -3344,7 +3344,7 @@
        "4                       256.0                0.140242                90.203861  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3355,7 +3355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -3751,7 +3751,7 @@
        "resorts_per_100ksq_mile                  1.75454  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3779,7 +3779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3815,7 +3815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -3868,7 +3868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3890,7 +3890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3902,7 +3902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -3936,7 +3936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3948,7 +3948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -4010,7 +4010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -4450,7 +4450,7 @@
        "fastQuads_skiable_ratio                         0.00125  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4461,7 +4461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -4470,6 +4470,20 @@
      "text": [
       "A file already exists with this name.\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Do you want to overwrite? (Y/N) Y\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing file.  \"../data\\ski_data_step3_features.csv\"\n"
      ]
     }
    ],
